# hashtag_generator

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
