[project]
name = "hashtag-generator"
version = "0.1.0"
description = "LLM-powered social media hashtag generator with multi-provider support (Ollama, Groq, OpenAI, Anthropic)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
    "certifi>=2026.2.25",
]
